# Federated-Agent-Protocol

./: .gitignore  CLAUDE.md  LICENSE  README.md
fap/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DOCKER-DOCS.md  DOCKER.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker.env  pyproject.toml
fap/apps/coordinator_api/: __init__.py
fap/apps/participant_docs/: __init__.py
fap/apps/participant_kb/: __init__.py
fap/apps/participant_llm/: README.md
fap/apps/participant_logs/: __init__.py
fap/docs/: release-checklist.md
fap/docs/release-notes/: v0.1.0-alpha.md
fap/examples/agent_integration/: README.md  simple_agent.py
fap/examples/demo_scenario/: README.md  create_task.json  expected_flow.md  run_demo.py
fap/examples/local_docs/: README.md
fap/examples/local_kb/: README.md
fap/examples/local_logs/: README.md
fap/migrations/: env.py
fap/scripts/: docker-setup.bat  docker-setup.sh  entrypoint-coordinator.sh
fap/spec/: README.md  current-state-report.md  envelope.md  governed-execution-flow.md  identity-and-trust.md  message-family.md  participant-evaluation-flow.md  policy-rules.md  protocol.md  state-model.md  v0.2-domain-agents-roadmap.md  v0.2-plan.md
fap/test-feature-llm-participant/: README.md  test_integration_orchestration.py  test_protocol_compliance.py  test_unit_evaluator.py  test_unit_executor.py
fap/tests/: conftest.py  test_agent_integration_artifacts.py  test_coordinator_aggregate_api.py  test_coordinator_ask_api.py  test_coordinator_dispatch_participant_docs_api.py  test_coordinator_dispatch_participant_docs_execute_api.py  test_coordinator_dispatch_participant_kb_api.py  test_coordinator_dispatch_participant_kb_execute_api.py  test_coordinator_dispatch_participant_logs_api.py  test_coordinator_dispatch_participant_logs_execute_api.py  test_coordinator_messages_api.py  test_coordinator_orchestrate_api.py  test_coordinator_participants_api.py  test_coordinator_persistence_api.py  test_coordinator_runs_api.py  test_demo_scenario_artifacts.py  test_health_endpoints.py  test_mcp_integration_artifacts.py  test_participant_discovery_endpoints.py  test_participant_docs_evaluate_api.py  test_participant_docs_execute_api.py  test_participant_docs_messages_api.py  test_participant_kb_evaluate_api.py  test_participant_kb_execute_api.py  test_participant_kb_messages_api.py  test_participant_logs_evaluate_api.py  test_participant_logs_execute_api.py  test_participant_logs_messages_api.py  test_release_artifacts.py
(+147 files in other folders)
