[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fap"
version = "0.1.0a0"
description = "Federated Agent Protocol alpha reference runtime and Python packages."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["protocol", "federated", "agents", "governance", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "mcp",
    "pydantic",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = [
    "apps/coordinator_api/src",
    "apps/participant_docs/src",
    "apps/participant_logs/src",
    "apps/participant_kb/src",
    "apps/participant_llm/src",
    "packages/fap_client/src",
    "packages/fap_mcp/src",
    "packages/fap_core/src",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/fap_core/tests",
    "packages/fap_client/tests",
    "packages/fap_mcp/tests",
    "apps/coordinator_api/tests",
    "apps/participant_docs/tests",
    "apps/participant_logs/tests",
    "apps/participant_kb/tests",
    "apps/participant_llm/tests",
    "test-feature-llm-participant",
    "tests",
]
addopts = ["--import-mode=importlib"]
pythonpath = [
    "apps/coordinator_api/src",
    "apps/participant_docs/src",
    "apps/participant_logs/src",
    "apps/participant_kb/src",
    "apps/participant_llm/src",
    "packages/fap_client/src",
    "packages/fap_mcp/src",
    "packages/fap_core/src",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
explicit_package_bases = true
mypy_path = [
    "apps/coordinator_api/src",
    "apps/participant_docs/src",
    "apps/participant_logs/src",
    "apps/participant_kb/src",
    "apps/participant_llm/src",
    "packages/fap_client/src",
    "packages/fap_mcp/src",
    "packages/fap_core/src",
]
